--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
     "fuse": "^0.4.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.11.2"
