--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "firebase": "^9.22.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
-    "fuse": "^0.4.0",
+    "fuse.js": "^6.6.2",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
