--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "firebase": "^9.22.1",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.6",
+    "framer-motion": "^10.12.18",
     "fuse.js": "^6.6.2",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
-    "react-router-dom": "^6.11.2"
+    "react-native-autocomplete-dropdown": "^3.0.2",
+    "react-router-dom": "^6.11.2",
+    "react-tilt": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
