--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gulp": "^4.0.2",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "tailwindcss-debug-screens": "^2.2.1",
