--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.11.2",
     "react-tilt": "^1.0.2"
@@ -29,6 +31,7 @@
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-helmet": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
