--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "react-icons": "^4.10.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.11.2",
-    "react-tilt": "^1.0.2"
+    "react-tilt": "^1.0.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.6",
+    "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
