--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-icons": "^4.10.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.11.2",
-    "react-tilt": "^1.0.2",
-    "uuid": "^9.0.0"
+    "react-tilt": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
